...
            "state" : "translated",
            "value" : "Add"
          }
        }
      }
    },
    "Add Data" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Data"
          }
...
            "state" : "translated",
            "value" : "This application is built to track symptoms of chemotherapy patients and early detection of febrile neutropenia."
          }
        }
      }
    },
    "What data would you like to add?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What data would you like to add?"
          }
...
