...
 - Optional end date and time of administration
 - Medication name
 - Medication dose
 */

enum DoseUnit: String, CaseIterable, Codable {
    case mgUnit = "mg"
    case mcgUnit = "mcg"
    case gUnit = "g"
    case mLUnit = "mL"
    case percentUnit = "%"
}

...
